[project]
name = "datetime-repeat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jesse Brooklyn Hannah", email = "jesse@jbhannah.net" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipython>=8.31.0"]
docs = [
    "myst-parser~=4.0.0",
    "sphinx~=8.1.3",
    "sphinx-autodoc-typehints~=3.0.1",
    "sphinx-rtd-theme~=3.0.2",
]
test = ["pytest~=8.3.4", "pytest-cov~=6.0.0", "pytest-xdist~=3.6.1"]
